# llamda

./: .flake8  .git-blame-ignore-revs  .gitignore  .gitmodules  .readthedocs.yml  LICENSE  Makefile  README.md  THIRD-PARTY-LICENSES.txt  conftest.py  pyproject.toml  requirements-ci.txt  setup.py  test_eoh.py  test_hsevo.py  test_mcts-ahd.py  test_reevo.py
.github/workflows/: ci.yml
ga/eoh/: __init__.py  eoh.py  eoh_adapter.py  eoh_evolution.py  eoh_interface_EC.py  problem_adapter.py
ga/eoh/original/: eoh.py  eoh_evolution.py  eoh_interface_EC.py  getParas.py  interface_LLM.py  pop_greedy.py  prob_rank.py
ga/eoh/original/prompts/: tsp_greedy.py
ga/hsevo/: evolution.py  hsevo.py
ga/mcts/: ahd_adapter.py  evolution.py  evolution_interface.py  mcts_ahd.py  problem_adapter.py
ga/mcts/cfg/llm_client/: openai.yaml
ga/mcts/source/: evolution.py  evolution_interface.py  getParas.py  interface_LLM.py  mcts.py  mcts_ahd.py  pop_greedy.py  prob_rank.py
ga/reevo/: evolution.py  reevo.py
hydra/: config.yaml
llamda/: evaluate.py  individual.py  problem.py  utils.py
llamda/ga/: base.py  utils.py
llamda/ga/eoh/: eoh.py  eoh_evolution.py  eoh_interface_EC.py  eoh_prompts.py
llamda/ga/hsevo/: evolution.py  hsevo.py  hsevo_prompts.py
llamda/ga/mcts/: evolution.py  evolution_interface.py  mcts.py  mcts_ahd.py  mcts_prompts.py
llamda/ga/reevo/: evolution.py  reevo.py  reevo_prompts.py
llamda/llm_client/: azure.py  base.py  litellm.py  llama_api.py  openai.py  zhipuai.py
llamda/problems/: README.md
llamda/problems/bpp_offline_aco/: aco.py  eval.py  gen_inst.py
llamda/problems/bpp_offline_aco/prompts/: problem.yaml
llamda/problems/bpp_online/: eval.py  gen_inst.py
llamda/problems/bpp_online/prompts/: problem.yaml
llamda/problems/cvrp_aco/: aco.py  eval.py  gen_inst.py
llamda/problems/cvrp_aco/prompts/: problem.yaml
llamda/problems/mkp_aco/: aco.py  eval.py  gen_inst.py
llamda/problems/mkp_aco/prompts/: problem.yaml
llamda/problems/tsp_aco/: aco.py  eval.py  gen_inst.py
llamda/problems/tsp_aco/prompts/: problem.yaml
llamda/problems/tsp_constructive/: eval.py  gen_inst.py
llamda/problems/tsp_constructive/prompts/: problem.yaml
llamda/prompts/: README.md
llamda/prompts/ga/eoh/: e1.j2  e1.txt  e2.j2  e2.txt  i1.j2  i1.txt  m1.j2  m1.txt  m2.j2  m2.txt
llamda/prompts/ga/hsevo/: crossover.j2  harmony_search.j2  mutation.j2  seed.j2  system_generator.j2  user_comprehensive_reflection.j2  user_flash_reflection.j2  user_generator.j2  user_generator.txt
llamda/prompts/ga/mcts/: e1.j2  e1.txt  e2.j2  e2.txt  i1.j2  i1.txt  m1.j2  m1.txt  m2.j2  m2.txt  post.j2  post.txt  refine.j2  refine.txt  s1.j2  s1.txt
llamda/prompts/ga/reevo/: crossover.j2  mutation.j2  seed.j2  user_generator.j2  user_generator.txt  user_reflector_lt.j2  user_reflector_lt.txt  user_reflector_st.j2  user_reflector_st.txt  user_reflector_st_black_box.txt
llamda/tests/ga/: test_eoh.py  test_hsevo.py  test_mcts.py  test_reevo.py
llamda/utils/: evaluate.py  problem.py  utils.py
llamda/utils/llm_client/: azure.py  base.py  litellm.py  llama_api.py  openai.py  zhipuai.py
problems/bpp_offline_aco/: aco.py  eval.py  gen_inst.py
problems/bpp_online/: eval.py  gen_inst.py
problems/cvrp_aco/: aco.py  eval.py
problems/mkp_aco/: eval.py  gen_inst.py
problems/tsp_aco/: aco.py  eval.py  gen_inst.py
problems/tsp_constructive/: gen_inst.py
tests/: common.py  mocks.py
tests/ga/: test_eoh.py  test_hsevo.py  test_mcts.py  test_reevo.py
tests/resources/evaluations/: eoh.json  hsevo.json  mcts.json  reevo.json
tests/resources/responses/eoh/: 0.txt  1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  3.txt  30.txt  31.txt  33.txt  34.txt  35.txt  (+14 more)
utils/: evaluate.py  problem.py  utils.py
(+87 files in other folders)
