[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llamda"
version = "0.0.1"
authors = [
    {name = "Henry Robbins", email = "hw.robbins@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10, <3.12"
dependencies = [
    "Jinja2",
    "litellm",
    "openai",
    "numpy",
    "torch",
    "scipy",
    "scikit-learn",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "black>=25.1",
    "flake8>=7.1",
    "mypy>=1.16",
    "pytest-cov>=6.0",
    "sphinx>=8.1",
    "sphinx-rtd-theme>=3.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
llamda = ["prompts/**/*", "problems/**/*"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "[%(levelname)s] %(name)s | %(asctime)s | %(message)s"
log_cli_date_format = "%Y-%m-%dT%H:%M:%S"
