[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llamda"
version = "0.0.1"
authors = [
    {name = "Henry Robbins", email = "hw.robbins@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10, <3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "Jinja2",
    "litellm",
    "openai",
    "numpy",
    "torch",
    "scipy",
    "scikit-learn",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
    "mypy>=1.16",
    "pytest-cov>=6.0",
]

[project.optional-dependencies]
docs = [
    "sphinx>=8.1",
    "sphinx-rtd-theme>=3.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
llamda = ["prompts/**/*", "problems/**/*"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
extend-ignore = ["E203", "E701"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["llamda"]

[tool.mypy]
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "[%(levelname)s] %(name)s | %(asctime)s | %(message)s"
log_cli_date_format = "%Y-%m-%dT%H:%M:%S"
